[package]
name = "limedb"
version = "0.1.6"
edition = "2021"
repository = "https://github.com/al8n/limedb"
homepage = "https://github.com/al8n/limedb"
documentation = "https://docs.rs/limedb"
description = "A template for creating Rust open-source repo on GitHub"
license = "MIT/Apache-2.0"
rust-version = "1.73"

[[bench]]
path = "benches/foo.rs"
name = "foo"
harness = false

[features]
default = []
std = ["skl/memmap", "thiserror", "parking_lot", "txn", "bytes/default"]
alloc = []

[dependencies]
aol = { path = "../aol" }
bytes = { version = "1", default-features = false }
derive_more = "0.99"
skl = { version = "0.12", default-features = false }
thiserror = { version = "1", optional = true }
viewit = "0.1.5"

parking_lot = { version = "0.12", optional = true }
txn = { version = "0.1", optional = true }

[dev-dependencies]
criterion = "0.5"
tempfile = "3"

[profile.bench]
opt-level = 3
debug = false
codegen-units = 1
lto = 'thin'
incremental = false
debug-assertions = false
overflow-checks = false
rpath = false

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
